2013-03-22  Khaled Hosny  <khaledhosny@eglug.org>

	XeTeX 0.9999.1

2013-03-12  Khaled Hosny  <khaledhosny@eglug.org>

	* xetex.web: Fix \XeTeXrevision.

2013-03-11  Khaled Hosny  <khaledhosny@eglug.org>

	XeTeX 0.9999.0

2013-03-07  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeXFontInst.cpp: Fix a typo.

2013-03-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex.web: Typo.

2013-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* am/xetex.am: Better rules for {e,xe}tex_version.h.

2013-02-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xetex.web: Adapt to e-TeX 2.5.

2013-02-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* etex_version.h: New file extracted from xetex.web.
	* am/xetex.am, xetexextra.h: Adjust.

2013-02-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: (W32) change to match the simplified win32_popen.

2013-01-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.h: Add #ifndef __cplusplus ... #endif for
	#define bool boolean to avoid compile error in cplusplus files.

2013-01-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Move u_getVersion(icuVersion) etc. below variable
	definitions, because Visual Studio 2005 does not know c99.

2013-01-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c: If necessary define or declare strndup().

	* XeTeXFontMgr.cpp, XeTeXLayoutInterface.cpp: Drop definition
	of M_PI here ...
	* trans.h: ... and '#define M_PI' here immediately after
	'#include <math.h>'.

	* XeTeX_ext.c: Print the Graphite2 version (from Akira).

2013-01-04  Khaled Hosny  <khaledhosny@eglug.org>

	Merge changes from XeTeX repository.

2013-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* XeTeX_ext.c: Use xcalloc() and strncpy() instead of strndup()
	because there are systems without it, e.g., MinGW.
	* xetex.h: Include "XeTeXOTMath.h" (protos for xetex.web).
	* am/xetex.am: Drop obsolete files from XeTeX change file merge.

2013-01-03  Khaled Hosny  <khaledhosny@eglug.org>
