@@ -1,3 +1,7 @@
+2013-03-25  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/xetex.am (EXTRA_DIST): Add NEWS and image/README.
+
 2013-03-22  Khaled Hosny  <khaledhosny@eglug.org>
 
 	XeTeX 0.9999.1
